fix: modal covers header

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -21,7 +21,7 @@ body{
     align-items: center;
     justify-content: center;
 
-    z-index: 4;
+    z-index: 5;
 }
 
 .modal-content{
